--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,91 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
+
+body {
+    background-color: #0e7e12;
+    margin: 10px;
+}
+
+h1 {
+    margin: 10px;
+    padding: 20px;
+    margin: auto;
+    text-align: center;
+}
+
+.card {
+    height: 640px;
+    width: 448px;
+    margin: auto;
+    margin-top: 5px;
+    background-color: white;
+    border-radius: 25px;
+    border: 1px solid black;
+    position: relative;
+}
+
+.top {
+    display: flex;
+}
+
+.bottom {
+    display: flex;
+
+}
+
+.top-suite {
+    position: absolute;
+    top: 70px;
+    left: 8px;
+    font-size: 90px;
+    padding: 20px;
+}
+
+.top-suite-number {
+    position: absolute;
+    top: 25px;
+    left: 15px;
+    font-size: 80px;
+    padding: 2px;
+}
+
+.bottom-suite {
+    position: absolute;
+    bottom: 85px;
+    right: 35px;
+    font-size: 75px;
+    transform: rotateX(180deg);
+    padding: 2px;
+}
+
+.bottom-suite-number {
+    position: absolute;
+    bottom: 35px;
+    right: 35px;
+    font-size: 75px;
+    transform: rotateX(180deg) rotateY(180deg);
+    padding: 2px;
+}
+
+.number {
+    font-size: 120px;
+    width: 50px;
+    height: 50px;
+    background-color: red;
+    /* Center vertically and horizontally */
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin: -25px 0 0 -25px;
+}
+
+#number {
+    font-size: 120px;
+    width: 50px;
+    height: 50px;
+    background-color: red;
+    /* Center vertically and horizontally */
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin: -75px 0 0 -25px;
+}
