--- a/src/style.scss
+++ b/src/style.scss
@@ -1,13 +1,7 @@
 body {
+    margin: 0;
     background-color: #0e7e12;
-    margin: 10px;
-}
-
-h1 {
-    margin: 10px;
-    padding: 20px;
-    margin: auto;
-    text-align: center;
+    box-sizing: border-box;
 }
 
 .card {
@@ -20,83 +14,56 @@ h1 {
     border: 1px solid black;
     position: relative;
 
-    .top {
-        display: flex;
-
-        .top-suite {
-            position: absolute;
-            top: 55px;
-            left: -2px;
-            font-size: 90px;
-            padding: 20px;
-        }
-
-        .top-suite-number {
-            position: absolute;
-            top: 10px;
-            left: 15px;
-            font-size: 80px;
-            padding: 2px;
-        }
-    }
-
     .middle {
+        text-align: center;
+        align-items: center;
+        justify-content: center;
+        font-size: 100px;
         border: 1px solid black;
-        height: 470px;
-        width: 260px;
+        height: 420px;
+        width: 240px;
         position: absolute;
         top: 50%;
         left: 50%;
-        margin: -240px 0 0 -135px;
-
-        // .number {
-        //     font-size: 120px;
-        //     width: 50px;
-        //     height: 50px;
-        //     background-color: red;
-        //     /* Center vertically and horizontally */
-        //     position: absolute;
-        //     top: 50%;
-        //     left: 50%;
-        //     margin: -25px 0 0 -25px;
-        // }
-
-        #number {
-            font-size: 120px;
-            width: 50px;
-            height: 50px;
-
-            /* Center vertically and horizontally */
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            margin: -75px 0 0 -50px;
-        }
-    }
-
-    .bottom {
+        margin: -220px 0 0 -120px;
         display: flex;
 
-        .bottom-suite {
-            position: absolute;
-            bottom: 80px;
-            right: 20px;
-            font-size: 90px;
-            transform: rotateX(180deg);
-            padding: 2px;
-        }
-
-        .bottom-suite-number {
-            position: absolute;
-            bottom: 20px;
-            right: 20px;
-            font-size: 80px;
-            transform: rotateX(180deg) rotateY(180deg);
-            padding: 2px;
-        }
-
     }
 
-    
+    &::before {
+        position: absolute;
+        top: 10px;
+        left: 20px;
+        font-size: 120px;
+    }
 
+    &::after {
+        position: absolute;
+        bottom: 10px;
+        right: 20px;
+        font-size: 120px;
+        transform: rotate(180deg);
+    }
+
+    &.spades:before,
+    &.spades:after {
+        content: '\2660';
+    }
+
+    &.clubs:before,
+    &.clubs:after {
+        content: '\2663';
+    }
+
+    &.hearts:before,
+    &.hearts:after {
+        content: '\2665';
+        color: red;
+    }
+
+    &.diamonds:before,
+    &.diamonds:after {
+        content: '\2666';
+        color: red;
+    }
 }
