--- a/src/style.css
+++ b/src/style.css
@@ -16,6 +16,20 @@ body {
   position: relative;
 }
 
+.card .topNum {
+  position: absolute;
+  top: -5px;
+  left: 20px;
+  font-size: 100px;
+}
+
+.card .top {
+  position: absolute;
+  top: 80px;
+  left: 20px;
+  font-size: 100px;
+}
+
 .card .middle {
   text-align: center;
   -webkit-box-align: center;
@@ -24,50 +38,34 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  font-size: 100px;
+  font-size: 150px;
   border: 1px solid black;
-  height: 420px;
+  height: 400px;
   width: 240px;
   position: absolute;
   top: 50%;
   left: 50%;
-  margin: -220px 0 0 -120px;
+  margin: -200px 0 0 -120px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-.card::before {
+.card .bottom {
   position: absolute;
-  top: 10px;
-  left: 20px;
-  font-size: 120px;
-}
-
-.card::after {
-  position: absolute;
-  bottom: 10px;
+  bottom: 80px;
   right: 20px;
-  font-size: 120px;
+  font-size: 100px;
   -webkit-transform: rotate(180deg);
           transform: rotate(180deg);
 }
 
-.card.spades:before, .card.spades:after {
-  content: '\2660';
-}
-
-.card.clubs:before, .card.clubs:after {
-  content: '\2663';
-}
-
-.card.hearts:before, .card.hearts:after {
-  content: '\2665';
-  color: red;
-}
-
-.card.diamonds:before, .card.diamonds:after {
-  content: '\2666';
-  color: red;
+.card .bottomNum {
+  position: absolute;
+  bottom: -5px;
+  right: 20px;
+  font-size: 100px;
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
 }
 /*# sourceMappingURL=style.css.map */
