--- a/src/style.scss
+++ b/src/style.scss
@@ -14,35 +14,51 @@ body {
     border: 1px solid black;
     position: relative;
 
+    .topNum {
+        position: absolute;
+        top: -5px;
+        left: 20px;
+        font-size: 100px;
+    }
+
+    .top {
+        position: absolute;
+        top: 80px;
+        left: 20px;
+        font-size: 100px;
+    }
+
     .middle {
         text-align: center;
         align-items: center;
         justify-content: center;
-        font-size: 100px;
+        font-size: 150px;
         border: 1px solid black;
-        height: 420px;
+        height: 400px;
         width: 240px;
         position: absolute;
         top: 50%;
         left: 50%;
-        margin: -220px 0 0 -120px;
+        margin: -200px 0 0 -120px;
         display: flex;
     }
 
-    &::before {
+    .bottom {
         position: absolute;
-        top: 10px;
-        left: 20px;
-        font-size: 120px;
-    }
-
-    &::after {
-        position: absolute;
-        bottom: 10px;
+        bottom: 80px;
         right: 20px;
-        font-size: 120px;
+        font-size: 100px;
         transform: rotate(180deg);
     }
+
+    .bottomNum {
+        position: absolute;
+        bottom: -5px;
+        right: 20px;
+        font-size: 100px;
+        transform: rotate(180deg);
+    }
+
 
     // &.spades:before,
     // &.spades:after {
