still trying... no success

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -14,7 +14,8 @@ body {
     border: 1px solid black;
     position: relative;
 
-    .topNum {
+    #top{
+        .topNum {
         position: absolute;
         top: -5px;
         left: 20px;
@@ -26,6 +27,7 @@ body {
         top: 80px;
         left: 20px;
         font-size: 100px;
+    }
     }
 
     .middle {
@@ -43,7 +45,8 @@ body {
         display: flex;
     }
 
-    .bottom {
+    #bottom{
+        .bottom {
         position: absolute;
         bottom: 80px;
         right: 20px;
@@ -58,6 +61,10 @@ body {
         font-size: 100px;
         transform: rotate(180deg);
     }
+
+    }
+
+    
 
 
     // &.spades:before,
